; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_VERSION_4_3.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/glad/src/extr_glad.c_load_GL_VERSION_4_3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_VERSION_4_3 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"glClearBufferData\00", align 1
@glad_glClearBufferData = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [21 x i8] c"glClearBufferSubData\00", align 1
@glad_glClearBufferSubData = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [18 x i8] c"glDispatchCompute\00", align 1
@glad_glDispatchCompute = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [26 x i8] c"glDispatchComputeIndirect\00", align 1
@glad_glDispatchComputeIndirect = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [19 x i8] c"glCopyImageSubData\00", align 1
@glad_glCopyImageSubData = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [24 x i8] c"glFramebufferParameteri\00", align 1
@glad_glFramebufferParameteri = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [28 x i8] c"glGetFramebufferParameteriv\00", align 1
@glad_glGetFramebufferParameteriv = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [24 x i8] c"glGetInternalformati64v\00", align 1
@glad_glGetInternalformati64v = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [24 x i8] c"glInvalidateTexSubImage\00", align 1
@glad_glInvalidateTexSubImage = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [21 x i8] c"glInvalidateTexImage\00", align 1
@glad_glInvalidateTexImage = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [26 x i8] c"glInvalidateBufferSubData\00", align 1
@glad_glInvalidateBufferSubData = common dso_local global i64 0, align 8
@.str.11 = private unnamed_addr constant [23 x i8] c"glInvalidateBufferData\00", align 1
@glad_glInvalidateBufferData = common dso_local global i64 0, align 8
@.str.12 = private unnamed_addr constant [24 x i8] c"glInvalidateFramebuffer\00", align 1
@glad_glInvalidateFramebuffer = common dso_local global i64 0, align 8
@.str.13 = private unnamed_addr constant [27 x i8] c"glInvalidateSubFramebuffer\00", align 1
@glad_glInvalidateSubFramebuffer = common dso_local global i64 0, align 8
@.str.14 = private unnamed_addr constant [26 x i8] c"glMultiDrawArraysIndirect\00", align 1
@glad_glMultiDrawArraysIndirect = common dso_local global i64 0, align 8
@.str.15 = private unnamed_addr constant [28 x i8] c"glMultiDrawElementsIndirect\00", align 1
@glad_glMultiDrawElementsIndirect = common dso_local global i64 0, align 8
@.str.16 = private unnamed_addr constant [24 x i8] c"glGetProgramInterfaceiv\00", align 1
@glad_glGetProgramInterfaceiv = common dso_local global i64 0, align 8
@.str.17 = private unnamed_addr constant [26 x i8] c"glGetProgramResourceIndex\00", align 1
@glad_glGetProgramResourceIndex = common dso_local global i64 0, align 8
@.str.18 = private unnamed_addr constant [25 x i8] c"glGetProgramResourceName\00", align 1
@glad_glGetProgramResourceName = common dso_local global i64 0, align 8
@.str.19 = private unnamed_addr constant [23 x i8] c"glGetProgramResourceiv\00", align 1
@glad_glGetProgramResourceiv = common dso_local global i64 0, align 8
@.str.20 = private unnamed_addr constant [29 x i8] c"glGetProgramResourceLocation\00", align 1
@glad_glGetProgramResourceLocation = common dso_local global i64 0, align 8
@.str.21 = private unnamed_addr constant [34 x i8] c"glGetProgramResourceLocationIndex\00", align 1
@glad_glGetProgramResourceLocationIndex = common dso_local global i64 0, align 8
@.str.22 = private unnamed_addr constant [28 x i8] c"glShaderStorageBlockBinding\00", align 1
@glad_glShaderStorageBlockBinding = common dso_local global i64 0, align 8
@.str.23 = private unnamed_addr constant [17 x i8] c"glTexBufferRange\00", align 1
@glad_glTexBufferRange = common dso_local global i64 0, align 8
@.str.24 = private unnamed_addr constant [26 x i8] c"glTexStorage2DMultisample\00", align 1
@glad_glTexStorage2DMultisample = common dso_local global i64 0, align 8
@.str.25 = private unnamed_addr constant [26 x i8] c"glTexStorage3DMultisample\00", align 1
@glad_glTexStorage3DMultisample = common dso_local global i64 0, align 8
@.str.26 = private unnamed_addr constant [14 x i8] c"glTextureView\00", align 1
@glad_glTextureView = common dso_local global i64 0, align 8
@.str.27 = private unnamed_addr constant [19 x i8] c"glBindVertexBuffer\00", align 1
@glad_glBindVertexBuffer = common dso_local global i64 0, align 8
@.str.28 = private unnamed_addr constant [21 x i8] c"glVertexAttribFormat\00", align 1
@glad_glVertexAttribFormat = common dso_local global i64 0, align 8
@.str.29 = private unnamed_addr constant [22 x i8] c"glVertexAttribIFormat\00", align 1
@glad_glVertexAttribIFormat = common dso_local global i64 0, align 8
@.str.30 = private unnamed_addr constant [22 x i8] c"glVertexAttribLFormat\00", align 1
@glad_glVertexAttribLFormat = common dso_local global i64 0, align 8
@.str.31 = private unnamed_addr constant [22 x i8] c"glVertexAttribBinding\00", align 1
@glad_glVertexAttribBinding = common dso_local global i64 0, align 8
@.str.32 = private unnamed_addr constant [23 x i8] c"glVertexBindingDivisor\00", align 1
@glad_glVertexBindingDivisor = common dso_local global i64 0, align 8
@.str.33 = private unnamed_addr constant [22 x i8] c"glDebugMessageControl\00", align 1
@glad_glDebugMessageControl = common dso_local global i64 0, align 8
@.str.34 = private unnamed_addr constant [21 x i8] c"glDebugMessageInsert\00", align 1
@glad_glDebugMessageInsert = common dso_local global i64 0, align 8
@.str.35 = private unnamed_addr constant [23 x i8] c"glDebugMessageCallback\00", align 1
@glad_glDebugMessageCallback = common dso_local global i64 0, align 8
@.str.36 = private unnamed_addr constant [21 x i8] c"glGetDebugMessageLog\00", align 1
@glad_glGetDebugMessageLog = common dso_local global i64 0, align 8
@.str.37 = private unnamed_addr constant [17 x i8] c"glPushDebugGroup\00", align 1
@glad_glPushDebugGroup = common dso_local global i64 0, align 8
@.str.38 = private unnamed_addr constant [16 x i8] c"glPopDebugGroup\00", align 1
@glad_glPopDebugGroup = common dso_local global i64 0, align 8
@.str.39 = private unnamed_addr constant [14 x i8] c"glObjectLabel\00", align 1
@glad_glObjectLabel = common dso_local global i64 0, align 8
@.str.40 = private unnamed_addr constant [17 x i8] c"glGetObjectLabel\00", align 1
@glad_glGetObjectLabel = common dso_local global i64 0, align 8
@.str.41 = private unnamed_addr constant [17 x i8] c"glObjectPtrLabel\00", align 1
@glad_glObjectPtrLabel = common dso_local global i64 0, align 8
@.str.42 = private unnamed_addr constant [20 x i8] c"glGetObjectPtrLabel\00", align 1
@glad_glGetObjectPtrLabel = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*)*)* @load_GL_VERSION_4_3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_GL_VERSION_4_3(i64 (i8*)* %0) #0 {
  %2 = alloca i64 (i8*)*, align 8
  store i64 (i8*)* %0, i64 (i8*)** %2, align 8
  %3 = load i32, i32* @GLAD_GL_VERSION_4_3, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %93

6:                                                ; preds = %1
  %7 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %8 = call i64 %7(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @glad_glClearBufferData, align 8
  %9 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %10 = call i64 %9(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* @glad_glClearBufferSubData, align 8
  %11 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %12 = call i64 %11(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  store i64 %12, i64* @glad_glDispatchCompute, align 8
  %13 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %14 = call i64 %13(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.3, i64 0, i64 0))
  store i64 %14, i64* @glad_glDispatchComputeIndirect, align 8
  %15 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %16 = call i64 %15(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  store i64 %16, i64* @glad_glCopyImageSubData, align 8
  %17 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %18 = call i64 %17(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.5, i64 0, i64 0))
  store i64 %18, i64* @glad_glFramebufferParameteri, align 8
  %19 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %20 = call i64 %19(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.6, i64 0, i64 0))
  store i64 %20, i64* @glad_glGetFramebufferParameteriv, align 8
  %21 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %22 = call i64 %21(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.7, i64 0, i64 0))
  store i64 %22, i64* @glad_glGetInternalformati64v, align 8
  %23 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %24 = call i64 %23(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.8, i64 0, i64 0))
  store i64 %24, i64* @glad_glInvalidateTexSubImage, align 8
  %25 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %26 = call i64 %25(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.9, i64 0, i64 0))
  store i64 %26, i64* @glad_glInvalidateTexImage, align 8
  %27 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %28 = call i64 %27(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.10, i64 0, i64 0))
  store i64 %28, i64* @glad_glInvalidateBufferSubData, align 8
  %29 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %30 = call i64 %29(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.11, i64 0, i64 0))
  store i64 %30, i64* @glad_glInvalidateBufferData, align 8
  %31 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %32 = call i64 %31(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.12, i64 0, i64 0))
  store i64 %32, i64* @glad_glInvalidateFramebuffer, align 8
  %33 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %34 = call i64 %33(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.13, i64 0, i64 0))
  store i64 %34, i64* @glad_glInvalidateSubFramebuffer, align 8
  %35 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %36 = call i64 %35(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.14, i64 0, i64 0))
  store i64 %36, i64* @glad_glMultiDrawArraysIndirect, align 8
  %37 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %38 = call i64 %37(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.15, i64 0, i64 0))
  store i64 %38, i64* @glad_glMultiDrawElementsIndirect, align 8
  %39 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %40 = call i64 %39(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.16, i64 0, i64 0))
  store i64 %40, i64* @glad_glGetProgramInterfaceiv, align 8
  %41 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %42 = call i64 %41(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.17, i64 0, i64 0))
  store i64 %42, i64* @glad_glGetProgramResourceIndex, align 8
  %43 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %44 = call i64 %43(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.18, i64 0, i64 0))
  store i64 %44, i64* @glad_glGetProgramResourceName, align 8
  %45 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %46 = call i64 %45(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.19, i64 0, i64 0))
  store i64 %46, i64* @glad_glGetProgramResourceiv, align 8
  %47 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %48 = call i64 %47(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.20, i64 0, i64 0))
  store i64 %48, i64* @glad_glGetProgramResourceLocation, align 8
  %49 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %50 = call i64 %49(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.21, i64 0, i64 0))
  store i64 %50, i64* @glad_glGetProgramResourceLocationIndex, align 8
  %51 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %52 = call i64 %51(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.22, i64 0, i64 0))
  store i64 %52, i64* @glad_glShaderStorageBlockBinding, align 8
  %53 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %54 = call i64 %53(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.23, i64 0, i64 0))
  store i64 %54, i64* @glad_glTexBufferRange, align 8
  %55 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %56 = call i64 %55(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.24, i64 0, i64 0))
  store i64 %56, i64* @glad_glTexStorage2DMultisample, align 8
  %57 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %58 = call i64 %57(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.25, i64 0, i64 0))
  store i64 %58, i64* @glad_glTexStorage3DMultisample, align 8
  %59 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %60 = call i64 %59(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.26, i64 0, i64 0))
  store i64 %60, i64* @glad_glTextureView, align 8
  %61 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %62 = call i64 %61(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.27, i64 0, i64 0))
  store i64 %62, i64* @glad_glBindVertexBuffer, align 8
  %63 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %64 = call i64 %63(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.28, i64 0, i64 0))
  store i64 %64, i64* @glad_glVertexAttribFormat, align 8
  %65 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %66 = call i64 %65(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.29, i64 0, i64 0))
  store i64 %66, i64* @glad_glVertexAttribIFormat, align 8
  %67 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %68 = call i64 %67(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.30, i64 0, i64 0))
  store i64 %68, i64* @glad_glVertexAttribLFormat, align 8
  %69 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %70 = call i64 %69(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.31, i64 0, i64 0))
  store i64 %70, i64* @glad_glVertexAttribBinding, align 8
  %71 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %72 = call i64 %71(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.32, i64 0, i64 0))
  store i64 %72, i64* @glad_glVertexBindingDivisor, align 8
  %73 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %74 = call i64 %73(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.33, i64 0, i64 0))
  store i64 %74, i64* @glad_glDebugMessageControl, align 8
  %75 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %76 = call i64 %75(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.34, i64 0, i64 0))
  store i64 %76, i64* @glad_glDebugMessageInsert, align 8
  %77 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %78 = call i64 %77(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.35, i64 0, i64 0))
  store i64 %78, i64* @glad_glDebugMessageCallback, align 8
  %79 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %80 = call i64 %79(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.36, i64 0, i64 0))
  store i64 %80, i64* @glad_glGetDebugMessageLog, align 8
  %81 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %82 = call i64 %81(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.37, i64 0, i64 0))
  store i64 %82, i64* @glad_glPushDebugGroup, align 8
  %83 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %84 = call i64 %83(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.38, i64 0, i64 0))
  store i64 %84, i64* @glad_glPopDebugGroup, align 8
  %85 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %86 = call i64 %85(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.39, i64 0, i64 0))
  store i64 %86, i64* @glad_glObjectLabel, align 8
  %87 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %88 = call i64 %87(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.40, i64 0, i64 0))
  store i64 %88, i64* @glad_glGetObjectLabel, align 8
  %89 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %90 = call i64 %89(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.41, i64 0, i64 0))
  store i64 %90, i64* @glad_glObjectPtrLabel, align 8
  %91 = load i64 (i8*)*, i64 (i8*)** %2, align 8
  %92 = call i64 %91(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.42, i64 0, i64 0))
  store i64 %92, i64* @glad_glGetObjectPtrLabel, align 8
  br label %93

93:                                               ; preds = %6, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
